--- a/swig/Makefile
+++ b/swig/Makefile
@@ -1,7 +1,7 @@
 
-src: python/wripaca.py wripaca_wrap.c
+src: python/wripaca.py wripaca_wrap.c ../include/wripaca.h
 
-wripaca_wrap.c python/wripaca.py: wripaca.i
+wripaca_wrap.c python/wripaca.py: wripaca.i ../include/wripaca.h
 	swig -python -outdir python wripaca.i
  
 
